--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,16 @@
+:root {
+    --primary-color: '#325b97';
+    --secondary-color: '#9cafeb';
+    --font-color: '#e1e1ff';
+    --bg-color: '#000013';
+    --heading-color: '#818cab';
+}
 
+* {
+    padding: 0;
+    border: 0;
+    margin: 0;
+    font-size: 14px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+        sans-serif;
+}
